--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <link rel="apple-touch-icon" href="assets/logo.png" sizes="180x180">
     <link rel="icon" href="assets/logo.png" sizes="32x32" type="image/png">
     <link rel="icon" href="assets/logo.png" sizes="16x16" type="image/png">
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FW5D30S9JV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-FW5D30S9JV');
+</script>
     
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
