--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     <!-- Page Title -->
     <title>Aryan Utkarsh</title>
         
-    <!-- Favicons Icons -->  
-    <link rel="apple-touch-icon" href="assets/logo.png" sizes="180x180">
-    <link rel="icon" href="assets/logo.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="assets/logo.png" sizes="16x16" type="image/png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+
+  <!-- Icons for Apple devices -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon.png">
+
+  <!-- Icons for Android devices -->
+  <link rel="manifest" href="manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000000">
+  <link rel="icon" sizes="192x192" href="android-chrome-192x192.png">
+
+  <!-- Icons for Windows devices -->
+  <meta name="msapplication-TileImage" content="assets/logo-144x144.png">
+  <meta name="msapplication-TileColor" content="#000000">
+    
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW5D30S9JV"></script>
