--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="theme-color" content="#000000">
-  <link rel="icon" sizes="192x192" href="android-chrome-192x192.png">
+  <link rel="icon" sizes="192x192" href="assets/android-chrome-192x192.png">
 
   <!-- Icons for Windows devices -->
   <meta name="msapplication-TileImage" content="assets/logo-144x144.png">
