--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Aryan Utkarsh</title>
         
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="icon" type="image/png" href="https://github.com/Aryanutkarsh/portfolio/blob/1a695b717bf61f502b2c5ac0503dde754e42dbdb/assets/favicon.png">
 
   <!-- Icons for Apple devices -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
