--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="icon" sizes="192x192" href="assets/android-chrome-192x192.png">
 
   <!-- Icons for Windows devices -->
-  <meta name="msapplication-TileImage" content="assets/logo-144x144.png">
+  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/logo-144x144.png">
   <meta name="msapplication-TileColor" content="#000000">
     
   
