--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/favicon.png">
 
   <!-- Icons for Apple devices -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
 
   <!-- Icons for Android devices -->
   <link rel="manifest" href="manifest.json">
