--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-</html>
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
     <meta property="og:title" content="Aryan Utkarsh">
     <meta property="og:description" content="Python Programmer who is Hunting data to Decode what it conveys">
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon light.png" media="(prefers-color-scheme: light)" />
+    <link rel="apple-touch-icon-precomposed" sizes="180x180" href="assets/favicon180.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="167x167" href="assets/favicon167.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/favicon152.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/favicon120.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/favicon76.png" />
+    <link rel="apple-touch-icon-precomposed" href="assets/favicon180.png" />
 
     <!-- Page Description -->
     <meta name="description" content="Python Programmer who is Hunting data to Decode what it conveys">
@@ -12,25 +22,6 @@
     <!-- Page Title -->
     <title>Aryan Utkarsh</title>
         
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/favicon.png">
-
-  <!-- Icons for Apple devices -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/apple-touch-icon.png">
-
-  <!-- Icons for Android devices -->
-  <link rel="manifest" href="manifest.json">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#000000">
-  <link rel="icon" sizes="192x192" href="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/android-chrome-192x192.png">
-
-  <!-- Icons for Windows devices -->
-  <meta name="msapplication-TileImage" content="https://cdn.jsdelivr.net/gh/Aryanutkarsh/portfolio/assets/logo-144x144.png">
-  <meta name="msapplication-TileColor" content="#000000">
-    
   
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW5D30S9JV"></script>
@@ -61,7 +52,7 @@
     </div>
 
     <!-- intro section -->
-    <div id="intro" style="position: relative; z-index: 9999;">
+    <div id="intro">
         <h2 style="font-family: 'Quicksand';">Aryan Utkarsh</h2>
         <div class="divider"></div>
         <h3>Python Programmer who is Hunting data to Decode what it conveys</h3>
