--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Poppins:400,500,600,700' rel='stylesheet'>
+  <script src="https://kit.fontawesome.com/5b6704d7d9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Avatar section -->
@@ -56,8 +57,8 @@
         <h2 style="font-family: 'Quicksand';">Aryan Utkarsh</h2>
         <div class="divider"></div>
         <h3>Python Programmer who is Hunting data to Decode what it conveys</h3>
-        <a href="https://www.linkedin.com/in/aryan-utkarsh" style="color:#0e76a8;margin: 5px;" target="_blank"><img class="icon" src="https://www.vectorlogo.zone/logos/linkedin/linkedin-tile.svg" alt="linkedin"></a>
-        <a href="https://github.com/Aryanutkarsh" style="color: white;margin: 5px" target="_blank"><img class="icon" src="https://www.vectorlogo.zone/logos/github/github-tile.svg" alt="github"></a>
+        <a href="https://www.linkedin.com/in/aryan-utkarsh" style="color:#0e76a8;margin: 5px;" target="_blank"><span style="font-size: 39px; margin: 2px"><i class="fa fa-linkedin fa-bounce"></i></span></a>
+        <a href="https://github.com/Aryanutkarsh" style="color: white;margin: 5px" target="_blank"><span style="font-size: 39px; margin: 2px"><i class="fa fa-github fa-bounce"></i></span></a>
     </div>
     
     
